--- a/index.html
+++ b/index.html
@@ -3,20 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <title>Calculadoras: IMC e RQC</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background: #ff7809;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h2 {
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    input[type="number"] {
+      padding: 8px 10px;
+      width: 200px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      outline: none;
+      transition: 0.2s;
+    }
+
+    input[type="number"]:focus {
+      border-color: #4caf50;
+      box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
+    }
+
+    button {
+      padding: 10px 20px;
+      margin-top: 15px;
+      border: none;
+      border-radius: 5px;
+      background-color: #4caf50;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    h3 {
+      margin-top: 15px;
+      color: #333;
+    }
+
+    hr {
+      width: 50%;
+      margin: 50px 0;
+      border: 0;
+      border-top: 1px solid #ccc;
+    }
+
+    .calculator {
+      background: #fff;
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+    }
+  </style>
 </head>
-<body style="font-family: Arial; text-align: center; margin-top: 50px;">
+<body>
 
-  <h2>Calcular IMC</h2>
+  <div class="calculator">
+    <h2>Calcular IMC</h2>
+    <label for="num1">Massa (kg):</label>
+    <input type="number" id="num1" placeholder="Massa">
 
-  <label for="num1">Massa (kg):</label>
-  <input type="number" id="num1" placeholder="Massa"><br><br>
+    <label for="num2">Altura (m):</label>
+    <input type="number" id="num2" placeholder="Altura">
 
-  <label for="num2">Altura (m):</label>
-  <input type="number" id="num2" placeholder="Altura"><br><br>
+    <button id="somar">Calcular IMC</button>
+    <h3 id="resultado"></h3>
+  </div>
 
-  <button id="somar">Calcular IMC</button>
+  <hr>
 
-  <h3 id="resultado"></h3>
+  <div class="calculator">
+    <h2>Calcular RQC</h2>
+    <label for="num3">Cintura (cm):</label>
+    <input type="number" id="num3" placeholder="Cintura">
+
+    <label for="num4">Quadril (cm):</label>
+    <input type="number" id="num4" placeholder="Quadril">
+
+    <button id="button">Calcular RQC</button>
+    <h3 id="result"></h3>
+  </div>
 
   <script>
     const num1 = document.getElementById('num1');
@@ -30,28 +112,12 @@
 
       if (!isNaN(n1) && !isNaN(n2) && n2 > 0) {
         const calc = n1 / (n2 * n2);
-        const resp = calc.toFixed(2);
-        resultado.textContent = "IMC: " + resp;
+        resultado.textContent = "IMC: " + calc.toFixed(2);
       } else {
         resultado.textContent = "Digite valores válidos!";
       }
     });
-  </script>
 
-
-  <h2>Calcular RQC</h2>
-
-  <label for="num3">Cintura (cm):</label>
-  <input type="number" id="num3" placeholder="Cintura"><br><br>
-
-  <label for="num4">Quadril (cm):</label>
-  <input type="number" id="num4" placeholder="Quadril"><br><br>
-
-  <button id="button">Calcular RQC</button>
-
-  <h3 id="result"></h3>
-
-  <script>
     const num3 = document.getElementById('num3');
     const num4 = document.getElementById('num4');
     const result = document.getElementById('result');
@@ -63,8 +129,7 @@
 
       if (!isNaN(c) && !isNaN(q) && q > 0) {
         const calc = c / q;
-        const resp = calc.toFixed(2);
-        result.textContent = "RQC: " + resp;
+        result.textContent = "RQC: " + calc.toFixed(2);
       } else {
         result.textContent = "Digite valores válidos!";
       }
