--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
     margin-bottom: 10px;
   }
 
+  label {
+    display: block;
+    text-align: left;
+    width: 100%;
+    max-width: 250px;
+    margin: 10px auto 5px auto;
+    font-weight: bold;
+    color: #333;
+  }
+
   input[type="number"] {
+    display: block;
     padding: 10px;
     width: 100%;
     max-width: 250px;
@@ -40,7 +51,7 @@
     border: 1px solid #ccc;
     outline: none;
     transition: 0.2s;
-    margin-bottom: 10px;
+    margin: 0 auto 10px auto;
   }
 
   input[type="number"]:focus {
@@ -49,8 +60,9 @@
   }
 
   button {
+    display: block;
     padding: 10px 20px;
-    margin-top: 10px;
+    margin: 15px auto 0 auto;
     border: none;
     border-radius: 5px;
     background-color: #4caf50;
