--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <title>Calculadoras: IMC, RQC e GC</title>
+  <title>Calculadoras: IMC, RCQ e GC</title>
   <style>
   body {
     font-family: 'Arial', sans-serif;
@@ -140,29 +140,30 @@
 
   <hr>
 
-  <!-- RQC -->
+  <!-- RCQ -->
   <div class="calculator">
-    <h2>Calcular RQC</h2>
+    <h2>Calcular RCQ</h2>
     <label for="num3">Cintura (cm):</label>
     <input type="number" id="num3" placeholder="Cintura">
 
     <label for="num4">Quadril (cm):</label>
     <input type="number" id="num4" placeholder="Quadril">
 
-    <button id="button">Calcular RQC</button>
+    <button id="button">Calcular RCQ</button>
     <h3 id="result"></h3>
   </div>
 
   <hr>
 
-  <!-- GC -->
+  <!-- GC e GCM -->
   <div class="calculator">
-    <h2>Calcular Gasto Calórico (GC)</h2>
+    <h2>Calcular GC e GCM</h2>
     <label for="num5">Massa (kg):</label>
     <input type="number" id="num5" placeholder="Massa">
 
-    <button id="buttonGC">Calcular GC</button>
+    <button id="buttonGC">Calcular GC e GCM</button>
     <h3 id="resultGC"></h3>
+    <h3 id="resultGCM"></h3> <!-- Novo campo para o GCM -->
   </div>
 
   <script>
@@ -179,6 +180,7 @@
     const num5 = document.getElementById('num5');
     const buttonGC = document.getElementById('buttonGC');
     const resultGC = document.getElementById('resultGC');
+    const resultGCM = document.getElementById('resultGCM'); // novo elemento
 
     // ---------- Funções ----------
     function calcularIMC() {
@@ -209,9 +211,12 @@
       const m = parseFloat(num5.value);
       if (!isNaN(m) && m > 0) {
         const gc = 0.0175 * m * 24 * 60;
-        resultGC.textContent = "Gasto Calórico: " + gc.toFixed(2) + " kcal por dia";
+        const gcm = gc * 0.25; // Gasto Calórico Médio (por hora)
+        resultGC.textContent = "GC: " + gc.toFixed(2) + " kcal por dia";
+        resultGCM.textContent = "GCM: " + gcm.toFixed(2) + " kcal";
       } else {
         resultGC.textContent = "Digite uma massa válida!";
+        resultGCM.textContent = "";
       }
     }
 
